Updating Decision Tree Model

--- a/DecisionTree.ipynb
+++ b/DecisionTree.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,11 +47,9 @@
       "Germany - Best parameters: {'max_depth': 10, 'min_samples_leaf': 10, 'min_samples_split': 2}\n",
       "Germany - MSE: 1.4868843256264321\n",
       "Germany - MAE: 0.7677330995277721\n",
-      "Germany - MAPE: 262.50264496827134 %\n",
       "France - Best parameters: {'max_depth': 10, 'min_samples_leaf': 10, 'min_samples_split': 2}\n",
       "France - MSE: 1.0878491892743125\n",
-      "France - MAE: 0.652670261328456\n",
-      "France - MAPE: 692.3335521864061 %\n"
+      "France - MAE: 0.652670261328456\n"
      ]
     }
    ],
