added comments and updated readme

--- a/RandomForest_StackedModel.ipynb
+++ b/RandomForest_StackedModel.ipynb
@@ -36,6 +36,7 @@
     "df_fr_y=df_fr['TARGET']\n",
     "df_fr=df_fr.drop(columns=['TARGET'])\n",
     "\n",
+    "# Splitting data in 80% training and 20% testing\n",
     "X_train_de, X_test_de, y_train_de, y_test_de = train_test_split(df_de, df_de_y, test_size=0.2, random_state=69)\n",
     "X_train_fr, X_test_fr, y_train_fr, y_test_fr = train_test_split(df_fr, df_fr_y, test_size=0.2, random_state=69)"
    ]
@@ -292,12 +293,13 @@
    "outputs": [],
    "source": [
     "def grid_search_random_forest(X_train,y_train,X_test,y_test):\n",
+    "    # get categorical columns and encode them\n",
     "    for col in X_train.columns:\n",
     "        if X_train[col].dtype == 'object':\n",
     "            le = LabelEncoder()\n",
     "            X_train[col] = le.fit_transform(X_train[col])\n",
     "            X_test[col] = le.transform(X_test[col])\n",
-    "\n",
+    "    # parameters for grid search\n",
     "    param_grid = {\n",
     "        'max_depth': [None, 10, 20, 30],\n",
     "        'min_samples_split': [2, 5, 10],\n",
@@ -305,20 +307,20 @@
     "        'n_estimators': [100, 200, 300, 400],\n",
     "        'min_samples_leaf': [1, 2, 4]\n",
     "    }\n",
-    "\n",
+    "    # defining random forest regressor and grid search\n",
     "    rf = RandomForestRegressor()\n",
     "    grid_search = GridSearchCV(estimator=rf, param_grid=param_grid, cv=3, n_jobs=-1, verbose=0)\n",
     "    grid_search.fit(X_train, y_train)\n",
-    "\n",
-    "    params=grid_search.best_params_\n",
+    "    # get best parameters\n",
+    "    params = grid_search.best_params_\n",
     "    print(params)\n",
     "    \n",
     "    best_rf = RandomForestRegressor(**params)\n",
     "    best_rf.fit(X_train, y_train)\n",
     "    y_pred = best_rf.predict(X_test)\n",
     "\n",
-    "    print('Mean Squared Error: ', mse(y_test, y_pred))\n",
-    "    print('Mean Absolute Error: ', mae(y_test, y_pred))"
+    "    print(f'Mean Squared Error:  {mse(y_test, y_pred)}')\n",
+    "    print(f'Mean Absolute Error: {mae(y_test, y_pred)}')"
    ]
   },
   {
@@ -366,25 +368,27 @@
    "outputs": [],
    "source": [
     "def stacked_model(X_train,y_train,X_test,y_test):\n",
+    "    # stacked model comprising of linear regression and decision tree regressor\n",
     "    for col in X_train.columns:\n",
     "        if X_train[col].dtype == 'object':\n",
     "            le = LabelEncoder()\n",
     "            X_train[col] = le.fit_transform(X_train[col])\n",
     "            X_test[col] = le.transform(X_test[col])\n",
-    "                    \n",
+    "    \n",
+    "    dt = DecisionTreeRegressor()                \n",
     "    lr = LinearRegression()\n",
-    "    dt = DecisionTreeRegressor()\n",
-    "\n",
+    "    \n",
     "    meta_model = LinearRegression()\n",
-    "\n",
+    "    \n",
+    "    # intercept and max depth are the parameters to be tuned\n",
     "    param_grid_lr = {'fit_intercept': [True, False]}\n",
     "    param_grid_dt = {'max_depth': [None, 2, 5, 10]}\n",
     "\n",
-    "    grid_lr = GridSearchCV(lr, param_grid_lr, cv=5)\n",
     "    grid_dt = GridSearchCV(dt, param_grid_dt, cv=5)\n",
-    "\n",
-    "    grid_lr.fit(X_train, y_train)\n",
+    "    grid_lr = GridSearchCV(lr, param_grid_lr, cv=5)\n",
+    "    \n",
     "    grid_dt.fit(X_train, y_train)\n",
+    "    grid_lr.fit(X_train, y_train)\n",
     "\n",
     "    base_models = [grid_lr.best_estimator_, grid_dt.best_estimator_]\n",
     "\n",
@@ -393,8 +397,8 @@
     "    stacking_model.fit(X_train.values, y_train.values)\n",
     "    y_pred = stacking_model.predict(X_test)\n",
     "\n",
-    "    print('Mean Squared Error: ', mse(y_test, y_pred))\n",
-    "    print('Mean Absolute Error: ', mae(y_test, y_pred))"
+    "    print(f'Mean Squared Error:  {mse(y_test, y_pred)}')\n",
+    "    print(f'Mean Absolute Error: {mae(y_test, y_pred)}')"
    ]
   },
   {
